voice options is mostly done except for some minor bugs